fixed the nav to be sticky on desktop and not on mobile.

--- a/src/scss/navigation/_base.scss
+++ b/src/scss/navigation/_base.scss
@@ -1,6 +1,3 @@
-body{
-  margin-top: 75px;
-}
 body.admin-bar .trd-nav-primary{
   top: 32px;
 }
@@ -8,33 +5,24 @@ body.move-over .trd-nav-primary{
   left: -$newsletter-open-move;
   right: $newsletter-open-move;
 }
-
-.trd-nav-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  max-width: $nav-max-width;
-  height: 100%;
-  margin: 0 auto;
-  flex-wrap: wrap;
-}
-
-.is-fixed{
-  .trd-nav-primary{
+body.is-sticky{
+  padding-top: 110px;
+  .trd-nav{
     position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
     box-shadow: 0 1px 5px rgba(0,0,0,0.5);
-    .trd-nav{
-      &-logo{
-        img{
-          height: 40px;
-        }
+    &-logo{
+      img{
+        height: 40px;
       }
-      &-link{
-        padding: rem-in-px(1) rem-in-px(0.5);
-      }
-      &-link{
-        @include font-size(0.8);
-      }
+    }
+  }
+  .trd-nav-primary{
+    .trd-nav-link{
+      padding: rem-in-px(1) rem-in-px(0.5);
+      @include font-size(0.8);
     }
   }
   .trd-nav-account{
@@ -55,10 +43,25 @@ body.move-over .trd-nav-primary{
   }
 }
 
+body.is-move-out{
+  .trd-nav-secondary{
+    position: absolute;
+    top: -70px;
+    width: 100%;
+  }
+}
+
+.trd-nav-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: $nav-max-width;
+  height: 100%;
+  margin: 0 auto;
+  flex-wrap: wrap;
+}
+
 .trd-nav{
-  position: relative;
-  top: 0;
-  left: 0;
   width: 100%;
   display: block;
   height: $nav-height;
@@ -98,14 +101,10 @@ body.move-over .trd-nav-primary{
   }
 
   &-primary{
-    position: fixed;
-    width: 100%;
-    left: 0;
-    top: 0;
     background-color: $color-nav-primary-bg;
     color: $color-nav-primary-txt;
     z-index: 2;
-    transition: all 0.6s $transition-easing;
+    transition: all 0.6s $transition-easing !important;
     *{
       transition: padding 0.6s $transition-easing, font-size 0.6s $transition-easing;
     }
@@ -171,6 +170,8 @@ body.move-over .trd-nav-primary{
     background-color: #111;
     color: #fff;
     z-index: 1;
+    // transition: top 0.6s $transition-easing;
+    top: 0px;
     .trd-nav{
       &-left{
         display: none;
@@ -501,15 +502,18 @@ body.move-over .trd-nav-primary{
   }
 }
 @media only screen and (max-width: 1090px){
-  body{
-    margin-top: 125px;
-  }
-  .is-fixed{
+  body.is-sticky{
+    padding-top: 121px;
     .trd-nav-menu-btn{
       padding: rem-in-px(0.5) rem-in-px(1);
     }
     .trd-nav-search-form{
       height: 50px;
+    }
+  }
+  body.is-move-out{
+    .trd-nav{
+      top: -121px;
     }
   }
   .trd-nav{
